changed label on the Show/Hide Sprint History button

--- a/static/index.html
+++ b/static/index.html
@@ -375,7 +375,7 @@
                             var toggleSprintHistoryButton = document.createElement("BUTTON");
                             toggleSprintHistoryButton.id = "sprint_display_sprint_history";
                             toggleSprintHistoryButton.onclick = cycleSprintHistory;
-                            toggleSprintHistoryButton.innerHTML = "Show/Hide Sprint History";
+                            toggleSprintHistoryButton.innerHTML = "Show (None/All/Last) Sprint";
 
                             var sprintTag = document.createElement("input");
                             sprintTag.id = "sprint_name";
