modified name of instruction button

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
             </div>
             <hr style="clear:both">
             <button onclick="toggleLayouts()">Layout Options</button><p class="url_layouts" id="default_layouts" style="display:none"> </p>
-            <p><button onclick="toggleAbout()">Instructions</button></p>
+            <p><button onclick="toggleAbout()">Show/Hide Instructions</button></p>
             <pre id="about_text" style="display:none">
 Tunnel-vision prevents overediting by limiting how much of your
 previous work you can see.
