--- a/static/index.html
+++ b/static/index.html
@@ -174,6 +174,24 @@ Happy Writing!</pre>
                 if (!results[2]) return '';
                 return decodeURIComponent(results[2].replace(/\+/g, " "));
             }
+            function insertParam(key, value, url)
+            {
+                //key = encodeURI(key); value = encodeURI(value);
+                var kvp = url.substr(1).split('&');
+                var i=kvp.length; var x; while(i--)
+                {
+                    x = kvp[i].split('=');
+                    if (x[0]==key)
+                    {
+                        x[1] = value;
+                        kvp[i] = x.join('=');
+                        break;
+                    }
+                }
+                if(i<0) {kvp[kvp.length] = [key,value].join('=');}
+                url = "?" + kvp.join('&');
+                return url;
+            }
             function createWidgetDiv(widgetType) {
                 if( widgetType == null ) {
                     return [widgetStateUpdate, null];
@@ -599,6 +617,26 @@ Happy Writing!</pre>
 
                 return [widgetStateUpdate, element];
             }
+            function generateWai() {
+                return (Math.random() + 1).toString(36).substring(2,20);
+            }
+            function getWai() {
+                var waiJSON = getApi(getProjectName(), ["who_am_i"]);
+                var wai = "";
+                if(Object.keys(waiJSON).length != 0 && waiJSON["who_am_i"] != null){
+                    wai = waiJSON["who_am_i"];
+                } else {
+                    wai = generateWai();
+                    setApi(getProjectName(), {"who_am_i": wai});
+                }
+                return wai;
+            }
+            function verifyWai() {
+                return getParameterByName("wai") == getWai();
+            }
+            function replaceWai(url) {
+                return insertParam("wai", getWai(), url);
+            }
             function getDefaultParams(useUserDefinedDefault) {
                 var defaultLayout = "?L=tunnel,save&R=notes,sprint,stats,wpm";
                 if(useUserDefinedDefault) {
@@ -658,11 +696,11 @@ Happy Writing!</pre>
             function toggleLayouts() {
                 var defaultLayouts = document.getElementById("default_layouts");
                 if(defaultLayouts.innerHTML.trim() == "") {
-                    var origParams = getDefaultParams(false);
-                    var centerParams = "?C=tunnel,sprint";
-                    var justTunnelParams = "?C=tunnel";
-                    var rightAlignedNotesParams = "?L=notes,tunnel,save&R=sprint,stats,wpm";
-                    var randParams = getRandomParams();
+                    var origParams = replaceWai(getDefaultParams(false));
+                    var centerParams = replaceWai("?C=tunnel,sprint");
+                    var justTunnelParams = replaceWai("?C=tunnel");
+                    var rightAlignedNotesParams = replaceWai("?L=notes,tunnel,save&R=sprint,stats,wpm");
+                    var randParams = replaceWai(getRandomParams());
                     defaultLayouts.innerHTML = "Adjust url parameters to change layout:<br><b>Suggested:</b> <a href=\"" + origParams +"\">" + origParams + "</a><br><b>Minimal:</b> <a href=\"" + centerParams +"\">" + centerParams + "</a><br><b>Zero Frills:</b> <a href=\"" + justTunnelParams +"\">" + justTunnelParams + "</a><br><b>Notes First:</b> <a href=\"" + rightAlignedNotesParams +"\">" + rightAlignedNotesParams + "</a><br><b>Random:</b> <a href=\"" + randParams +"\">" + randParams + "</a>";
                 }
                 if(defaultLayouts.style.display == "none") {
@@ -684,7 +722,11 @@ Happy Writing!</pre>
                 //redirect if no params are given:
                 if(!document.location.search.length) {
                     //default to :
-                    url += getDefaultParams(true);
+                    url += replaceWai(getDefaultParams(true));
+                    window.location.replace(url);
+                }
+                if(!verifyWai(url)) {
+                    url = url.substring(0, url.length - document.location.search.length) + replaceWai(document.location.search);
                     window.location.replace(url);
                 }
 
